--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -136,7 +136,7 @@
                                                                                th:name="email"
                                                                                id="emailEdit"
                                                                                th:value="${user.getEmail()}"
-                                                                               th:placeholder="${user.email}">
+                                                                               th:placeholder="${user.email}">5
                                                                     </div>
                                                                     <div class="form-group">
                                                                         <label for="passwordEdit"><strong>Password</strong></label>
@@ -299,6 +299,7 @@
                                             <label for="newEmail"><strong>Email</strong></label>
                                             <input type="email" class="form-control"
                                                    id="newEmail" name="email" th:field="${newUser.email}">
+                                            <p th:if="${#fields.hasErrors('email')}" th:errorclass="error" th:errors="*{email}"></p>
                                         </div>
                                         <div class="form-group">
                                             <label for="newPassword"><strong>Password</strong></label>
